--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "slices_of_pie = 6\n",
     "slices_eaten = 0\n",
-    "while slices_\n",
+    "while slices_of_pie >0\n",
     "# use a while loop to eat each slice of pie\n",
     "# add each slice to the slices_eaten variable"
    ]
