--- a/index.ipynb
+++ b/index.ipynb
@@ -69,6 +69,7 @@
     "time_for_breakfast = 1468 # in seconds\n",
     "number_of_cooked_pancakes = 0\n",
     "# use a while loop to make yourself 5 pancakes for breakfast\n",
+    "while number_of_cooked_pancakes\n",
     "# each pancake takes 27 seconds to cook on each side\n",
     "# you must decrease the time_for_breakfast each time you \n",
     "# add a pancake to the skillet (frying pan) or flip a pancake (i.e. 2 times per pancake)\n",
