Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,7 @@
     "while number_of_cooked_pancakes <6:\n",
     "    time_for_breakfast -= (27*2)\n",
     "    number_of_cooked_pancakes+=1\n",
-    "print()\n",
+    "print(\"I now have \"+ str(number_of_cooked_pancake))\n",
     "# each pancake takes 27 seconds to cook on each side\n",
     "# you must decrease the time_for_breakfast each time you \n",
     "# add a pancake to the skillet (frying pan) or flip a pancake (i.e. 2 times per pancake)\n",
