--- a/index.ipynb
+++ b/index.ipynb
@@ -62,17 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I now have 6 but only 1144 seconds left for breakfast\n"
+     ]
+    }
+   ],
    "source": [
     "time_for_breakfast = 1468 # in seconds\n",
     "number_of_cooked_pancakes = 0\n",
     "# use a while loop to make yourself 5 pancakes for breakfast\n",
-    "while number_of_cooked_pancakes <6:\n",
+    "while number_of_cooked_pancakes <5:\n",
     "    time_for_breakfast -= (27*2)\n",
     "    number_of_cooked_pancakes+=1\n",
-    "print(\"I now have \"+ str(number_of_cooked_pancakes)+\" but only \"+str(time_for_breakfast)+\"\")\n",
+    "print(\"I now have \"+ str(number_of_cooked_pancakes)+\" but only \"+str(time_for_breakfast)+\" seconds left for breakfast\")\n",
     "# each pancake takes 27 seconds to cook on each side\n",
     "# you must decrease the time_for_breakfast each time you \n",
     "# add a pancake to the skillet (frying pan) or flip a pancake (i.e. 2 times per pancake)\n",
