--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,9 @@
     "fed_patrons = []\n",
     "for patron in line_of_hungry_patrons:\n",
     "    if patron%2 == 0:\n",
-    "        fed_patrons.append\n",
+    "        fed_patrons.append(patron)\n",
+    "        line_of_hungry_patrons.remove(patron)\n",
+    "    \n",
     "# use a while loop to to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
     "# then remove the even numbered patrons from the line_of_hungry_patrons\n",
