--- a/index.ipynb
+++ b/index.ipynb
@@ -104,9 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28]\n"
+     ]
+    }
+   ],
    "source": [
     "line_of_hungry_patrons = list(range(0,30))\n",
     "fed_patrons = []\n",
@@ -117,7 +126,8 @@
     "    else:\n",
     "        continue\n",
     "\n",
-    "pr\n",
+    "print(line_of_hungry_patrons)\n",
+    "print(fed_patrons)\n",
     "# use a while loop to to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
     "# then remove the even numbered patrons from the line_of_hungry_patrons\n",
