--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "    if \n",
+    "    if people['pet']\n",
     "    iteration_count += 1\n",
     "    pass"
    ]
