--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,8 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "    if people['pet']\n",
+    "    if people['pet'] == 'dog':\n",
+    "        first_dog_person\n",
     "    iteration_count += 1\n",
     "    pass"
    ]
