Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -173,8 +173,8 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "    if person['pet'] == 'dog':\n",
-    "        first_dog_person.append\n",
+    "    if people['pet'] == 'dog':\n",
+    "        first_dog_person\n",
     "    iteration_count += 1\n",
     "    pass"
    ]
