--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,9 @@
     "iteration_count = 0\n",
     "for person in people:\n",
     "    if person['pet'] == 'dog':\n",
-    "        first_dog_person.append\n",
+    "        first_dog_person.append(person['name'])\n",
+    "        break\n",
+    "    else:\n",
     "    iteration_count += 1\n",
     "    pass"
    ]
