Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,9 +176,8 @@
     "    if person['pet'] == 'dog':\n",
     "        first_dog_person.append(person['name'])\n",
     "        break\n",
-    "    else:\n",
     "    iteration_count += 1\n",
-    "    pass"
+    "print(first_dog_person,)"
    ]
   },
   {
