--- a/index.ipynb
+++ b/index.ipynb
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[] 6\n"
+      "['Katie'] 0\n"
      ]
     }
    ],
@@ -181,9 +181,11 @@
     "first_dog_person = []\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "    if person['pet'] == 'dog':\n",
+    "    if person['pet'] == 'Dog':\n",
     "        first_dog_person.append(person['name'])\n",
     "        break\n",
+    "    else:\n",
+    "        continue\n",
     "    iteration_count += 1\n",
     "print(first_dog_person,iteration_count)"
    ]
