--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
     "# use a for loop to create a list of the cat owners who are under the age of 28\n",
     "cat_owners = []\n",
     "for person in people:\n",
-    "    if person['pet']\n",
+    "    if person['pet']=='Cat' and person['age'] <\n",
     "# for loop goes here"
    ]
   },
