--- a/index.ipynb
+++ b/index.ipynb
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Katie'] 1\n"
+      "[{'name': 'Katie', 'age': 30, 'job': 'Teacher', 'pet': 'Dog', 'pet_name': 'Frank'}] 1\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
     "iteration_count = 0\n",
     "for person in people:\n",
     "    if person['pet'] == 'Dog':\n",
-    "        first_dog_person.append(person['name'])\n",
+    "        first_dog_person.append(person)\n",
     "        break\n",
     "    iteration_count += 1\n",
     "print(first_dog_person,iteration_count)"
@@ -190,14 +190,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Owen', 'Josh']\n"
+      "[{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}]\n",
+      "[{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}, {'name': 'Josh', 'age': 22, 'job': 'Student', 'pet': 'Cat', 'pet_name': 'Chat'}]\n"
      ]
     }
    ],
@@ -206,7 +207,7 @@
     "cat_owners = []\n",
     "for person in people:\n",
     "    if person['pet']=='Cat' and person['age'] < 28:\n",
-    "        cat_owners.append(person['name'])\n",
+    "        cat_owners.append(person)\n",
     "\n",
     "        print(cat_owners)\n",
     "# for loop goes here"
