--- a/index.ipynb
+++ b/index.ipynb
@@ -190,14 +190,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}]\n",
       "[{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}, {'name': 'Josh', 'age': 22, 'job': 'Student', 'pet': 'Cat', 'pet_name': 'Chat'}]\n"
      ]
     }
@@ -209,7 +208,7 @@
     "    if person['pet']=='Cat' and person['age'] < 28:\n",
     "        cat_owners.append(person)\n",
     "\n",
-    "        print(cat_owners)\n",
+    "print(cat_owners)\n",
     "# for loop goes here"
    ]
   },
@@ -221,7 +220,8 @@
    "source": [
     "# use a for loop to find the first person who is above 29 years old in our list of people\n",
     "# remember to use a break and or continue statement\n",
-    "thirty_something_yr_old = None\n",
+    "thirty_something_yr_old = []\n",
+    "\n",
     "# for loop goes here"
    ]
   },
