--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
     "# remember to use a break and or continue statement\n",
     "thirty_something_yr_old = []\n",
     "for person in people:\n",
-    "    if person['age']\n",
+    "    if person['age'] > 29:\n",
+    "        thirty_something_yr_old.append(person)\n",
     "# for loop goes here"
    ]
   },
