--- a/index.ipynb
+++ b/index.ipynb
@@ -214,9 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Katie', 'age': 30, 'job': 'Teacher', 'pet': 'Dog', 'pet_name': 'Frank'}]\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to find the first person who is above 29 years old in our list of people\n",
     "# remember to use a break and or continue statement\n",
@@ -224,6 +232,8 @@
     "for person in people:\n",
     "    if person['age'] > 29:\n",
     "        thirty_something_yr_old.append(person)\n",
+    "        break\n",
+    "print(thirty_something_yr_old)\n",
     "# for loop goes here"
    ]
   },
