--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,8 @@
     "dog_names = []\n",
     "for person in people:\n",
     "    if person['pet'] == 'Dog':\n",
-    "        \n",
+    "        dog_owner_names.append(person['name'])\n",
+    "        dog_names.append(person)\n",
     "# for loop goes here"
    ]
   },
