--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,9 @@
     "for person in people:\n",
     "    if person['pet'] == 'Dog':\n",
     "        dog_owner_names.append(person['name'])\n",
-    "        dog_names.append(person)\n",
+    "        dog_names.append(person['pet_name'])\n",
+    "\n",
+    "print(dog_owner_names, dog)\n",
     "# for loop goes here"
    ]
   },
