--- a/index.ipynb
+++ b/index.ipynb
@@ -239,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Katie', 'Estelle', 'Gustav'] ['Frank', 'Gabby', 'Helen']\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of person names and another list of pet names for all dog owners\n",
     "dog_owner_names = []\n",
@@ -251,7 +259,7 @@
     "        dog_owner_names.append(person['name'])\n",
     "        dog_names.append(person['pet_name'])\n",
     "\n",
-    "print(dog_owner_names, dog)\n",
+    "print(dog_owner_names, dog_names)\n",
     "# for loop goes here"
    ]
   },
