Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,9 @@
     "for number in list_of_numbers:\n",
     "    if number % 2 == 1:\n",
     "        list_of_off_numbers_plus_ten.append(number+10)\n",
-    "    elif len(list_of_odd_numbers_plus_ten)"
+    "    elif len(list_of_odd_numbers_plus_ten) < 36:\n",
+    "        break\n",
+    "p"
    ]
   },
   {
